# caffe0

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: AddBinary.cmake  FindGlog.cmake  FindLibUnwind.cmake  FindMKL.cmake  FindcuBLAS.cmake
example/: CMakeLists.txt
example/cublas/: CMakeLists.txt  sgemm.cc
include/caffe/: caffe.hh
include/caffe/arch/: runtime.hh
include/caffe/arch/cpu/: runtime.hh
include/caffe/arch/cpu/x64/: lib.hh
include/caffe/arch/gpu/: runtime.hh
include/caffe/arch/gpu/amd/: runtime.hh
include/caffe/arch/gpu/nvidia/: runtime.hh
include/caffe/common/: blob.hh  global.hh  synced_mem.hh
include/caffe/common/raii/: cublas.hh  mkl.hh
include/caffe/layer/: base.hh  softmax_layer.hh
include/caffe/memory/: blob.hh
include/caffe/nn/: layer.hh  vision_layers.hh
include/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe.proto  tmp.proto
include/caffe/util/: device_alternative.hh  macros.hh  math_functions.hh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  blob.cc  global.cc  sync_mem.cc
src/memory/: blob.cc
src/proto/: CMakeLists.txt  caffe.proto
src/util/: CMakeLists.txt  device_alternative.cc  math_functions.cc
test/: test_caffe_main.hh
test/common/: CMakeLists.txt  synced_mem_test.cc  test_blob.cc  test_synced_mem.cc
test/util/: CMakeLists.txt  math_functions_test.cc
